--- a/PathFindingVisualizer/package.json
+++ b/PathFindingVisualizer/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@types/p5": "^0.9.1",
     "bootstrap": "^4.5.3",
     "p5": "^1.1.9",
     "rxjs": "~6.5.4",
