--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "compile-hero.disable-compile-files-on-did-save-code": false
+    "compile-hero.disable-compile-files-on-did-save-code": false,
+    "files.exclude": {
+        "**/dist": true
+    },
+    "search.exclude": {
+        "**/dist": true
+    }
 }
