--- a/PathFindingVisualizer/package.json
+++ b/PathFindingVisualizer/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^10.1.2",
     "@types/p5": "^0.9.1",
     "bootstrap": "^4.5.3",
+    "ngx-toastr": "^13.2.0",
     "p5": "^1.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
