--- a/PathFindingVisualizer/Dockerfile
+++ b/PathFindingVisualizer/Dockerfile
@@ -6,5 +6,5 @@ COPY . .
 RUN npm run build
 
 FROM nginx:1.17.1-alpine
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /usr/src/app/dist/aston-villa-app /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf 
+COPY --from=build /usr/src/app/dist/PathFindingVisualizer /usr/share/nginx/html
